# -web-hw07-SQLAlchemy

./: .gitignore  README.md  main.py  my_select.py  pyproject.toml
database/: models.py
migrations/versions/: 62a145cbd08d_init.py
migratios/versions/: 740eaeda29b6_add_students.py  a1abea1bd1a6_init.py
